[tool.poetry]
name = "keras2trt"
version = "0.2.0"
description = "CLI to convert TensorFlow models to TensorRT engines"
authors = ["Emrecan Altinsoy <emrecanaltinsoy@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/keras2trt/"
repository = "https://github.com/emrecanaltinsoy/keras2trt"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tf2onnx = "1.9.3"
onnx = "1.10.2"
typer = "0.6.1"
tensorflow = "2.8.0"
protobuf = "3.20.1"

[tool.poetry.group.dev.dependencies]
black = "22.8.0"
pytest = "7.1.3"
pytest-cov = "3.0.0"

[tool.poetry.scripts]
keras2trt = "keras2trt.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
